--- a/Camera/src/br/com/schumaker/camera/gfx/FrMain.form
+++ b/Camera/src/br/com/schumaker/camera/gfx/FrMain.form
@@ -24,6 +24,11 @@
             <Property name="text" type="java.lang.String" value="Settings"/>
           </Properties>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="jMenu5">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Help"/>
+          </Properties>
+        </Menu>
       </SubComponents>
     </Menu>
   </NonVisualComponents>
