--- a/Camera/src/br/com/schumaker/camera/gfx/FrMain.form
+++ b/Camera/src/br/com/schumaker/camera/gfx/FrMain.form
@@ -31,6 +31,7 @@
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu5">
           <Properties>
+            <Property name="mnemonic" type="int" value="72"/>
             <Property name="text" type="java.lang.String" value="Help"/>
           </Properties>
         </Menu>
